tests/sumo/errors/invalid_param/errors.sumo
Error: Invalid Bool Format ture
Quitting (on error).
